@@ -582,22 +582,50 @@
   "Z*": ["STK*P",  "(z*)(~UP)", "", "STROKE", "fingerspelling: `Z`"],
 
   # symbols
-  "'":   ["AE",           "'",       "",  "",       "' (single quote)"],
-  "-'s": ["AES",          "(')(.s)", "",  "",       "possessive suffix `'s`"],
-  "/":   ["OEU",          "/",       "",  "",       "/ (slash)"],
-  "+":   ["PHR*US",       "+",       "",  "",       "+ (plus sign)"],
-  "=":   ["KWA*LS",       "=",       "",  "",       "= (equals sign)"],
-  "*":   ["STA*R",        "*",       "",  "",       "* (asterisk)"],
-  "-":   ["H-PB",         "-",       "",  "",       "- (hyphen)"],
-  ".":   ["-FPLT",        ".",       "",  "",       ". (period)"],
-  ",":   ["-RBGS",        ",",       "",  "",       ", (comma)"],
-  "?":   ["STPH",         "?",       "",  "",       "? (question mark)"],
-  "!":   ["STKPWHR-FPLT", "!",       "",  "",       "! (exclamation mark)"],
-  ":":   ["STPH-FPLT",    ":",       "",  "",       ": (colon)"],
-  ";":   ["STPH*FPLT",    ";",       "",  "",       "; (semicolon)"],
-  "...": ["SKWR-RBGS",    "...",     "",  "",       "... (ellipsis)"],
-  "CAP": ["KPA",          "{}",      "↑", "STROKE", "capitalizes next word"],
-  " ":   ["SP-S",         "",        "",  "RARE",   "explicit space (usually in dictionary by mistake)"],
+  "-":   ["H-PB",      "-",       "",  "",       "- (hyphen)"],
+  "/":   ["OEU",       "/",       "",  "",       "/ (slash)"],
+  "'":   ["AE",        "'",       "",  "",       "' (apostrophe)"],
+  "-'s": ["AES",       "(')(.s)", "",  "",       "possessive suffix `'s`"],
+  ".":   ["-FPLT",     ".",       "",  "",       ". (period)"],
+  ",":   ["-RBGS",     ",",       "",  "",       ", (comma)"],
+  "?":   ["KWEZ",      "?",       "",  "",       "? (question mark)"],
+  "!":   ["SKHRAPL",   "!",       "",  "",       "! (exclamation mark)"],
+  "-.":  ["TP-PL",     ".",       "",  "STROKE", "ending . (period)"],
+  "-,":  ["KW-BG",     ",",       "",  "STROKE", "ending , (comma)"],
+  "-?":  ["KW-PL",     "?",       "",  "STROKE", "ending ? (question mark)"],
+  "-!":  ["TP-BG",     "!",       "",  "STROKE", "ending ! (exclamation mark)"],
+  "'-":  ["SKW-T",     "'",       "",  "STROKE", "starting ' (single quote)"],
+  "-'":  ["SKW*T",     "'",       "",  "STROKE", "ending ' (single quote)"],
+  "\"-": ["KW-GS",     "\"",      "",  "STROKE", "starting \" (double quote)"],
+  "-\"": ["KR-GS",     "\"",      "",  "STROKE", "ending \" (double quote)"],
+  "`-":  ["TR-RL",     "`",       "",  "STROKE", "starting ` (back quote)"],
+  "-`":  ["TR*RL",     "`",       "",  "STROKE", "ending ` (back quote)"],
+  "(":   ["PREPB",     "\\(",     "",  "STROKE", "( (left parenthesis)"],
+  ")":   ["PR*EPB",    ")",       "",  "STROKE", ") (right parenthesis)"],
+  "[":   ["PWR-BGT",   "[",       "",  "STROKE", "[ (left bracket)"],
+  "]":   ["PWR*BGT",   "]",       "",  "STROKE", "] (right bracket)"],
+  "<":   ["PWRABG",    "<",       "",  "STROKE", "< (left angle bracket)"],
+  ">":   ["PWRA*BG",   ">",       "",  "STROKE", "> (right angle bracket)"],
+  "{":   ["TPR-BGT",   "{",       "",  "STROKE", "{ (left curly brace)"],
+  "}":   ["TPR*BGT",   "}",       "",  "STROKE", "} (right curly brace)"],
+  "\\":  ["SPWHRAERB", "\\",      "",  "STROKE", "\\ (backslash)"],
+  "+":   ["PHR*US",    "+",       "",  "STROKE", "+ (plus sign)"],
+  "=":   ["KWA*LS",    "=",       "",  "STROKE", "= (equals sign)"],
+  "#":   ["HAERB",     "#",       "",  "STROKE", "# (number sign)"],
+  "$":   ["TK-PL",     "$",       "",  "STROKE", "$ (dollar sign)"],
+  "%":   ["P*ERS",     "%",       "",  "STROKE", "% (percent sign)"],
+  "&":   ["A*PBD",     "&",       "",  "STROKE", "& (ampersand)"],
+  "@":   ["KWRAT",     "@",       "",  "STROKE", "@ (at symbol)"],
+  "*":   ["STA*R",     "*",       "",  "STROKE", "* (asterisk)"],
+  "_":   ["RUPBD",     "_",       "",  "STROKE", "_ (underscore)"],
+  "~":   ["T*LD",      "~",       "",  "STROKE", "~ (tilde)"],
+  "|":   ["PAO*EUP",   "|",       "",  "STROKE", "| (pipe)"],
+  "^":   ["KR-RT",     "^",       "",  "STROKE", "^ (caret)"],
+  ":":   ["STPH-FPLT", ":",       "",  "STROKE", ": (colon)"],
+  ";":   ["STPH*FPLT", ";",       "",  "STROKE", "; (semicolon)"],
+  "...": ["SKWR-RBGS", "...",     "",  "STROKE", "... (ellipsis)"],
+  "CAP": ["KPA",       "{}",      "↑", "STROKE", "capitalizes next word"],
+  " ":   ["SP-S",      "",        "",  "RARE",   "explicit space (usually in dictionary by mistake)"],
 
   # number reference rules
   "~#":  ["#",  "",    "#   #   #   #   #", "REFERENCE", "shifts to number mode"],
